# automl-pipeline

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.opencode/skills/project-restructure/: SKILL.md
data/: test.csv
db/: queries.py  schema.py
doc/: analysis.md
docs/: analysis.md
frontend/: app.py
pipeline/: detector.py  importance.py  ingestion.py  predictor.py  preprocessing.py  summary.py  trainer.py
samples/: new_restaurants_to_predict.csv
src/automl_pipeline/: config.py
src/automl_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/automl_pipeline/ml/: detection.py  importance.py  ingestion.py  prediction.py  preprocessing.py  summary.py  training.py
src/automl_pipeline/storage/: database.py
src/automl_pipeline/web/: app.py
tests/: conftest.py
