[project]
name = "automl-pipeline"
version = "0.1.0"
description = "Upload a CSV, auto-train multiple models, pick the best one, get predictions"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "pandas>=2.0",
    "streamlit>=1.28",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
